tests/parser/errors.txt
def sum(x, y) # comment
^            Error: expected `:`
    r = x + y
    return r


def (x, y):
^   Error: expected function name
    return x + y


def sum x, y:
^       Error: expected `(` after function name
    return x + y
# )


def sum(, y):
^       Error: expected function's argument name
    return x + y


def sum(x y): # (
^         Error: expected `,` or `)` in function's arguments list
    return x + y


is
Error: unrecognized statement started with keyword^


class (Base):
^     Error: expected class name


class Class():
^           Error: expected base class name


i : 0
^   Error: expected type name


i : str int
^       Error: expected end of statement


t : Tuple[str int]
^             Error: expected `,` or `]` in type's arguments list